non-msrv-tests/tests/ui/option.stderr
error: unexpected option syntax
 --> tests/ui/option.rs:4:28
  |
4 | struct StructNoOption<T>(#[derive_where] PhantomData<T>);
  |                            ^^^^^^^^^^^^

error: unexpected option syntax
 --> tests/ui/option.rs:7:31
  |
7 | struct StructWrongSyntax<T>(#[derive_where = "default"] PhantomData<T>);
  |                               ^^^^^^^^^^^^^^^^^^^^^^^^

error: unexpected option syntax
  --> tests/ui/option.rs:11:4
   |
11 |     #[derive_where]
   |       ^^^^^^^^^^^^

error: unexpected option syntax
  --> tests/ui/option.rs:17:4
   |
17 |     #[derive_where = "default"]
   |       ^^^^^^^^^^^^^^^^^^^^^^^^

error: unknown option
  --> tests/ui/option.rs:22:46
   |
22 | struct StructInvalidOption<T>(#[derive_where(option)] PhantomData<T>);
   |                                              ^^^^^^

error: unknown option
  --> tests/ui/option.rs:26:17
   |
26 |     #[derive_where(option)]
   |                    ^^^^^^
